CardViewManager implement
TODO Click Events, Properties ....